force-app/main/default/objects/Quote_PDF__c/Quote_PDF__c.object-meta.xml
<CustomObject>
    <label>Quote Attachment</label>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Quote Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>