force-app/main/default/objects/Quote_PDF__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Quote_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>