force-app/main/default/objects/Quote_PDF__c/fields/Account_Names_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Names_Match__c</fullName>
    <formula>IF(
Account__c = Quote__r.Account__c
,&quot;Accounts Match&quot;
,&quot;No Match&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Names Match?</label>
    <type>Text</type>
</CustomField>