force-app/main/default/objects/Quote_PDF__c/fields/Date_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Quoted__c</fullName>
    <formula>IF( Account_Names_Match__c = &quot;No Match&quot;, 
null, 
Quote__r.Date_Quoted__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Quoted</label>
    <type>Date</type>
</CustomField>