force-app/main/default/objects/Quote_PDF__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF( Account_Names_Match__c = &quot;No Match&quot;, 
null, 
Quote__r.Expiration_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>