force-app/main/default/objects/Quote_PDF__c/fields/No_QLI__c.field-meta.xml
<CustomField>
    <fullName>No_QLI__c</fullName>
    <formula>IF( Account_Names_Match__c = &quot;No Match&quot;, 
null, 
Quote__r.Count_of_Line_Items__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>