force-app/main/default/objects/Quote_PDF__c/fields/Quote_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Account_ID__c</fullName>
    <formula>Quote__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Account ID</label>
    <type>Text</type>
</CustomField>