force-app/main/default/objects/Quote_PDF__c/fields/Quote_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Account_Name__c</fullName>
    <formula>Quote__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Account Name</label>
    <type>Text</type>
</CustomField>