force-app/main/default/objects/Quote_PDF__c/fields/Quote_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Attachment__c</fullName>
    <formula>IF( Account_Names_Match__c = &quot;No Match&quot;,
&quot;Quote has been moved to another Account&quot;,
HYPERLINK( &quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c , Quote__r.Name&amp;&quot; - &quot;&amp;File_Name__c , &quot;__self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Attachment</label>
    <type>Text</type>
</CustomField>