force-app/main/default/objects/Quote_PDF__c/fields/Quote_Subject__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subject__c</fullName>
    <formula>IF( Account_Names_Match__c = &quot;No Match&quot;, 
null, 
Quote__r.Subject__c
)</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>